--- a/yt-api-service/functions/package.json
+++ b/yt-api-service/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/storage": "^7.12.1",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0"
   },
